testsuite/bsc.typechecker/EmptyCase.bs.bsc-out.expected
checking package dependencies
compiling EmptyCase.bs
Error: "EmptyCase.bs", line 7, column 12: (P0075)
  Case statement with no clauses
